--- a/css/style.css
+++ b/css/style.css
@@ -1299,6 +1299,89 @@ body#Услуги footer {
       font-size: 28px; } }
 
 @media screen and (max-width: 720px) and (orientation: landscape) {
+  .menu-btn {
+    position: absolute;
+    z-index: 3;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    line-height: normal;
+    font-size: 16px;
+    cursor: pointer;
+    transition: all 500ms ease-in-out; }
+    .menu-btn .btn-line {
+      width: 28px;
+      height: 3px;
+      margin: 0 0 5px 0;
+      background: black;
+      transition: all 500ms ease-in-out; }
+    .menu-btn.close .btn-line:nth-child(1) {
+      transform: rotate(45deg) translate(5px, 5px); }
+    .menu-btn.close .btn-line:nth-child(2) {
+      opacity: 0; }
+    .menu-btn.close .btn-line:nth-child(3) {
+      transform: rotate(-45deg) translate(7px, -6px); }
+  .menu {
+    width: 100%;
+    opacity: 0.9;
+    visibility: hidden; }
+    .menu.show {
+      visibility: visible;
+      position: fixed;
+      z-index: 2;
+      height: auto;
+      margin-top: 10%;
+      justify-content: center;
+      align-items: center;
+      text-align: center; }
+    .menu-nav {
+      display: block;
+      text-align: center;
+      align-items: center;
+      justify-content: center;
+      float: none;
+      width: 100%;
+      height: auto;
+      overflow-x: hidden; }
+    .menu-nav {
+      margin: 0;
+      padding: 0;
+      background: #373737;
+      list-style: none;
+      transform: translate3d(0, -100%, 0);
+      transition: all 500ms ease-in-out; }
+      .menu-nav.show {
+        transform: translate3d(0, 0, 0);
+        -webkit-transform: translate3d(0, 0, 0);
+        -moz-transform: translate3d(0, 0, 0);
+        -ms-transform: translate3d(0, 0, 0);
+        -o-transform: translate3d(0, 0, 0); }
+    .menu .nav-item {
+      display: inline-block;
+      padding: 20px;
+      font-size: 32px;
+      transform: translate3d(600px, 0, 0);
+      transition: all 500ms ease-in-out; }
+      .menu .nav-item.show {
+        transform: translate3d(0, 0, 0); }
+      .menu .nav-item.current > a {
+        color: #72A5BA; }
+    .menu .nav-link {
+      display: inline-block;
+      position: relative;
+      font-size: 16px;
+      text-transform: uppercase;
+      padding: 1rem 0;
+      font-weight: 300;
+      color: white;
+      text-decoration: none;
+      transition: all 500ms ease-in-out; }
+      .menu .nav-link:hover {
+        color: lightgray;
+        transform: scale(1.1); }
   .headerImage h1 {
     padding-top: calc(100vh - 90vh);
     margin: 0 20px 0 0;
@@ -1329,6 +1412,89 @@ body#Услуги footer {
     font-size: 30px; } }
 
 @media screen and (max-width: 980px) and (orientation: landscape) {
+  .menu-btn {
+    position: absolute;
+    z-index: 3;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    line-height: normal;
+    font-size: 16px;
+    cursor: pointer;
+    transition: all 500ms ease-in-out; }
+    .menu-btn .btn-line {
+      width: 28px;
+      height: 3px;
+      margin: 0 0 5px 0;
+      background: black;
+      transition: all 500ms ease-in-out; }
+    .menu-btn.close .btn-line:nth-child(1) {
+      transform: rotate(45deg) translate(5px, 5px); }
+    .menu-btn.close .btn-line:nth-child(2) {
+      opacity: 0; }
+    .menu-btn.close .btn-line:nth-child(3) {
+      transform: rotate(-45deg) translate(7px, -6px); }
+  .menu {
+    width: 100%;
+    opacity: 0.9;
+    visibility: hidden; }
+    .menu.show {
+      visibility: visible;
+      position: fixed;
+      z-index: 2;
+      height: auto;
+      margin-top: 10%;
+      justify-content: center;
+      align-items: center;
+      text-align: center; }
+    .menu-nav {
+      display: block;
+      text-align: center;
+      align-items: center;
+      justify-content: center;
+      float: none;
+      width: 100%;
+      height: auto;
+      overflow-x: hidden; }
+    .menu-nav {
+      margin: 0;
+      padding: 0;
+      background: #373737;
+      list-style: none;
+      transform: translate3d(0, -100%, 0);
+      transition: all 500ms ease-in-out; }
+      .menu-nav.show {
+        transform: translate3d(0, 0, 0);
+        -webkit-transform: translate3d(0, 0, 0);
+        -moz-transform: translate3d(0, 0, 0);
+        -ms-transform: translate3d(0, 0, 0);
+        -o-transform: translate3d(0, 0, 0); }
+    .menu .nav-item {
+      display: inline-block;
+      padding: 20px;
+      font-size: 32px;
+      transform: translate3d(600px, 0, 0);
+      transition: all 500ms ease-in-out; }
+      .menu .nav-item.show {
+        transform: translate3d(0, 0, 0); }
+      .menu .nav-item.current > a {
+        color: #72A5BA; }
+    .menu .nav-link {
+      display: inline-block;
+      position: relative;
+      font-size: 16px;
+      text-transform: uppercase;
+      padding: 1rem 0;
+      font-weight: 300;
+      color: white;
+      text-decoration: none;
+      transition: all 500ms ease-in-out; }
+      .menu .nav-link:hover {
+        color: lightgray;
+        transform: scale(1.1); }
   .headerImage h1 {
     padding-top: calc(100vh - 80vh);
     margin: 0 50px 0 0;
@@ -1358,7 +1524,90 @@ body#Услуги footer {
   body#Услуги main h2 {
     font-size: 30px; } }
 
-@media screen and (max-width: 720px) and (orientation: landscape) {
+@media screen and (max-width: 540px) and (orientation: landscape) {
+  .menu-btn {
+    position: absolute;
+    z-index: 3;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-family: Roboto;
+    font-style: normal;
+    font-weight: normal;
+    line-height: normal;
+    font-size: 16px;
+    cursor: pointer;
+    transition: all 500ms ease-in-out; }
+    .menu-btn .btn-line {
+      width: 28px;
+      height: 3px;
+      margin: 0 0 5px 0;
+      background: black;
+      transition: all 500ms ease-in-out; }
+    .menu-btn.close .btn-line:nth-child(1) {
+      transform: rotate(45deg) translate(5px, 5px); }
+    .menu-btn.close .btn-line:nth-child(2) {
+      opacity: 0; }
+    .menu-btn.close .btn-line:nth-child(3) {
+      transform: rotate(-45deg) translate(7px, -6px); }
+  .menu {
+    width: 100%;
+    opacity: 0.9;
+    visibility: hidden; }
+    .menu.show {
+      visibility: visible;
+      position: fixed;
+      z-index: 2;
+      height: auto;
+      margin-top: 10%;
+      justify-content: center;
+      align-items: center;
+      text-align: center; }
+    .menu-nav {
+      display: block;
+      text-align: center;
+      align-items: center;
+      justify-content: center;
+      float: none;
+      width: 100%;
+      height: auto;
+      overflow-x: hidden; }
+    .menu-nav {
+      margin: 0;
+      padding: 0;
+      background: #373737;
+      list-style: none;
+      transform: translate3d(0, -100%, 0);
+      transition: all 500ms ease-in-out; }
+      .menu-nav.show {
+        transform: translate3d(0, 0, 0);
+        -webkit-transform: translate3d(0, 0, 0);
+        -moz-transform: translate3d(0, 0, 0);
+        -ms-transform: translate3d(0, 0, 0);
+        -o-transform: translate3d(0, 0, 0); }
+    .menu .nav-item {
+      display: inline-block;
+      padding: 20px;
+      font-size: 32px;
+      transform: translate3d(600px, 0, 0);
+      transition: all 500ms ease-in-out; }
+      .menu .nav-item.show {
+        transform: translate3d(0, 0, 0); }
+      .menu .nav-item.current > a {
+        color: #72A5BA; }
+    .menu .nav-link {
+      display: inline-block;
+      position: relative;
+      font-size: 16px;
+      text-transform: uppercase;
+      padding: 1rem 0;
+      font-weight: 300;
+      color: white;
+      text-decoration: none;
+      transition: all 500ms ease-in-out; }
+      .menu .nav-link:hover {
+        color: lightgray;
+        transform: scale(1.1); }
   .headerImage h1 {
     padding-top: calc(100vh - 90vh);
     margin: 0 10px 0 0;
