--- a/css/style.css
+++ b/css/style.css
@@ -16,7 +16,7 @@ body {
   color: #000000;
   width: 100%;
   height: 100%;
-  padding: 1rem 0;
+  padding: 0;
   overflow-x: hidden; }
 
 h1 {
@@ -92,6 +92,7 @@ button {
   background-color: #AEE1F7; }
 
 header {
+  margin-top: 0;
   position: relative;
   display: flex;
   padding: 10px;
