--- a/scss/style.scss
+++ b/scss/style.scss
@@ -19,7 +19,7 @@ body {
     color: set-text-color($backgroudColor);
     width: 100%;
     height: 100%;
-    padding: 1rem 0;
+    padding: 0;
     overflow-x: hidden;
 }
 
@@ -108,6 +108,7 @@ button {
 }
 
 header {
+    margin-top: 0;
     position: relative;
     display: flex;
     padding: 10px;
